"""
BUILD.bazel for @tummycrypt/tinyland-content.

Dual-mode build: works with both pnpm (standalone) and Bazel (CI/production).
  Standalone: cd packages/tinyland-content && pnpm build
  Monorepo:   bazel build //packages/tinyland-content/...
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")


ts_project(
    name = "tinyland_content",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":node_modules",
        "//packages:tsconfig_base",
        ":node_modules/gray-matter",
        ":node_modules/nanoid",
        ":node_modules/diff",
        ":node_modules/@types/diff",
        ":node_modules/@types/node",
        "//packages/tinyland-content-types:tinyland_content_types",
    ],
    visibility = ["//visibility:public"],
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tinyland_content",
    ],
    package = "@tummycrypt/tinyland-content",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "tinyland_content_test_lib",
    srcs = glob(["tests/**/*.test.ts"]),
    declaration = False,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":tinyland_content",
        ":node_modules",
        ":node_modules/vitest",
    ],
)

js_test(
    name = "test",
    data = [
        ":tinyland_content",
        ":tinyland_content_test_lib",
        ":node_modules",
        ":node_modules/vitest",
        "vitest.config.ts",
    ],
    entry_point = "//:vitest_bin",
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
